fixed alignments slide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ button.slick-next {
     right: -60px;
     outline: none;
     float: right;
-    margin-top: -240px;
+    margin-top: -196px;
     margin-left: 23px;
 }
  
@@ -173,6 +173,7 @@ span#message{
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     padding: 5px 25px 25px 25px;
+    height: 320px;
 }
  
 .card-content:hover {
@@ -197,16 +198,18 @@ h2.title{
 
 .card-action{
     background-color: #ac3792;
-
     color: #fff;
     text-align: center;
     font-size: 18px;
-    padding: 10px;    
+    padding: 10px;
     -webkit-transition: background-color 1000ms linear;
     -moz-transition: background-color 1000ms linear;
     -o-transition: background-color 1000ms linear;
     -ms-transition: background-color 1000ms linear;
     transition: background-color 1000ms linear;
+    position: fixed;
+    bottom: 40px;
+    width: 194px;
 }
 .card-action:hover{      
     background-color: #ac3792;
